<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--学生姓名-->
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/search_name"
        android:hint="@string/search_name"
        android:layout_gravity="center" />
    <!--学生所在学院-->
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/search_college"
        android:hint="@string/search_college"
        android:layout_gravity="center" />
    <!--学生专业-->
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/search_subject"
        android:hint="@string/search_subject"
        android:layout_gravity="center"/>

</LinearLayout>