<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!--学生图片-->
    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:background="@drawable/zgy"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/studentImageInfo" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="500dp">
    </ListView>


    <!--button跳转到ActivityStudent-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/btnAdd" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearch"
            android:layout_marginStart="50dp"
            android:gravity="center_horizontal"
            android:text="@string/btnSearch" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:text="@string/to_developer_textView"
            android:id="@+id/to_developer_info" />
    </LinearLayout>


</LinearLayout>