<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <!--学生图片-->
    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:background="@drawable/zgy"
        android:layout_marginEnd="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <!--学生姓名-->
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="18sp" />

        <!--学生学院-->
        <TextView
            android:id="@+id/college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/college" />


        <!--学生专业-->
        <TextView
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/subject" />

        <!--button跳转到ActivityStudent-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onEnter"
            android:text="跳转到ActivityStudent" />

    </LinearLayout>

</LinearLayout>